@@ -1,6 +1,8 @@
 DIST JavaScript-Minifier-XS-0.06.tar.gz 12129 RMD160 b8209c90b2ca63953f8240763430af5acf32b937 SHA1 6bd6bbb4cbc859a273dc3e1f93f1e5e21a2bc048 SHA256 2060507e51f6dc30b1664e1b443930626ecef151bb38af34e562f614a7698198
 DIST JavaScript-Minifier-XS-0.07.tar.gz 12153 RMD160 8361fe263f63940ca75df624339123033a88e478 SHA1 92e1adaadc355851491ca4470dab890f3d10e00a SHA256 f61c92bc56693191596484d7926dff07b5588de9d242a984b9aefbfea5838502
+DIST JavaScript-Minifier-XS-0.08.tar.gz 14458 RMD160 aa6d3dcce05141aec8738390875525c96a1d737e SHA1 a16f55b434c708ba355d699fe87caead15f5d282 SHA256 3a76e9fc6c7e1ce7f8bcf7a80ed2f483da72e96a3f86db5f6dc41f5feddc567e
 EBUILD JavaScript-Minifier-XS-0.06.ebuild 304 RMD160 10776e185b380200af8c9c98188860ff10564c9c SHA1 198a8f050e722d62c30d5dcaf5a56a0ae94cc19a SHA256 05b626567f259abeffd41fab7473db45a2239ba4043bfeb6339ec182c399d411
 EBUILD JavaScript-Minifier-XS-0.07.ebuild 304 RMD160 10776e185b380200af8c9c98188860ff10564c9c SHA1 198a8f050e722d62c30d5dcaf5a56a0ae94cc19a SHA256 05b626567f259abeffd41fab7473db45a2239ba4043bfeb6339ec182c399d411
-MISC ChangeLog 410 RMD160 0d077332e040fcd085b516851fb9a560fd7bd1b7 SHA1 4cccc8c6b0268b7cec40751c1e22b8ed09b81a70 SHA256 6656b332cf42c70694045b7eaef38cb284cb272de3ef0f2d90b8ea47cf62ba63
+EBUILD JavaScript-Minifier-XS-0.08.ebuild 304 RMD160 10776e185b380200af8c9c98188860ff10564c9c SHA1 198a8f050e722d62c30d5dcaf5a56a0ae94cc19a SHA256 05b626567f259abeffd41fab7473db45a2239ba4043bfeb6339ec182c399d411
+MISC ChangeLog 556 RMD160 f95a2f4ec1cf05f237afa9610ac76d8b56fe5473 SHA1 7bba90cd23fa926ad3adb639877f0aefd33a82b7 SHA256 3a0d9ac4d7a71f5643ecff46728e858795d62e694254df78bacd357cba76bcd5
 MISC metadata.xml 360 RMD160 bc9d362ca3ab206e17bff256d9499362fee96eb8 SHA1 17fbbea892f5c4b7405d8dfc7c7640ea3efab44f SHA256 cc525d04ecb16b93ee0ad3c9d1e0f157599020d575a88d0884ed6b5e215063e5
