@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*JavaScript-Minifier-XS-0.08 ( 16 Oct 2010 )
+
+  16 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +JavaScript-Minifier-XS-0.08.ebuild:
+  bump
+
 *JavaScript-Minifier-XS-0.07 ( 12 Jun 2010 )
 
   12 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
